<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:context="com.example.researchapp.PropertiesScreen"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:subtitleTextColor="#000000" />

    </LinearLayout>

    <include layout="@layout/content_properties_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/uploadNewPropertyButton"
            android:layout_width="137dp"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="100dp"
            android:text="Upload New Property"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/deletePropertyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="0dp"
            android:text="Delete a property"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/PropertiesHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="0dp"
            android:text="Properties:"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_below="@+id/PropertiesHeader">

            <RelativeLayout
                android:id="@+id/rLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

            </RelativeLayout>
        </ScrollView>

        <!--<TextView
            android:id="@+id/PropertiesHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="0dp"
            android:text="Properties:"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Property1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="0dp"
            android:text=""
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Property2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="0dp"
            android:text=""
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Property3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="0dp"
            android:text=""
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Property4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="0dp"
            android:text=""
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Property5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="125dp"
            android:layout_marginVertical="0dp"
            android:text=""
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold" />-->


    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>