<resources>
    <string name="app_name">Puro</string>
    <string name="title_activity_properties_screen">PropertiesScreen</string>
    <string name="title_activity_schedule_screen">ScheduleScreen</string>
    <string name="title_activity_billing_screen">BillingScreen</string>
    <string name="title_activity_message_screen">MessageScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_terms_and_conditions_page">terms_and_conditions_page</string>
    <string name="username">username</string>
</resources>
